Add dynamic select options

--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
         position: fixed;
         left: 0;
         bottom: 0;
-        background-color: #e0e0e0;
-        opacity: 50%;
+        background-color: rgba(0, 0, 0, 0.1);
         color: black;
         white-space: pre-line;
       }
@@ -32,13 +31,7 @@
   <body>
     <div id="chapter-container">
       <label for="chapter-number">Chapter: </label>
-      <select id="chapter-number" name="chapter-number">
-        <option value="1">1</option>
-        <option value="2">2</option>
-        <option value="3">3</option>
-        <option value="4">4</option>
-        <option value="5">5</option>
-      </select>
+      <select id="chapter-number" name="chapter-number"> </select>
     </div>
     <p id="display">
       Please hover over a highlighted area
