--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
         padding: 0;
         overflow: hidden;
       }
+
       #display {
-        width: 350px;
+        width: 300px;
         height: 200px;
         margin: 0px;
         margin-top: 10px;
@@ -20,7 +21,16 @@
         background-color: rgba(0, 0, 0, 0.1);
         color: black;
         white-space: pre-line;
+        border-style: outset;
+        border-width: 5px;
+        border-color: coral;
+        border-left-width: 0;
+        border-bottom-width: 0;
+        padding-top: 2px;
+        padding-right: 2px;
+        padding-left: 5px;
       }
+
       #chapter-container {
         position: fixed;
         margin-top: 3px;
